@@ -57,6 +57,13 @@ publishing {
 
 test {
     useJUnitPlatform()
+    //needed for lmdb to work correctly
+    doFirst {
+        jvmArgs = [
+                '--add-opens=java.base/java.nio=ALL-UNNAMED',
+                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+        ]
+    }
 }
 
 //Install Panako to home dir
